<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/fragment_first_recycler_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:text="@string/fragment_first_recycler_name"
                android:textColor="@color/outInfoRecyclerTitleColor"
                android:textSize="14sp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/fragment_first_recycler_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/outInfoRecyclerContentColor1"
                android:textSize="16sp" android:textStyle="normal|bold"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:text="@string/fragment_first_recycler_address"
                android:textColor="@color/outInfoRecyclerTitleColor"
                android:textSize="14sp" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/fragment_first_recycler_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/outInfoRecyclerAddressColor"
                android:textSize="16sp" android:textStyle="normal|bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/outInfoRecyclerLine"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/fragment_first_recycler_startTime"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerContentColor2"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_first_recycler_startTime"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerTitleColor"
                    android:textSize="14sp"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fragment_first_recycler_plan_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerContentColor2"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_first_recycler_plan_endTime"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerTitleColor"
                    android:textSize="14sp"
                />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/fragment_first_recycler_real_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerContentColor2"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_first_recycler_real_endTime"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/outInfoRecyclerTitleColor"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

</LinearLayout>