<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/fragment_first_recycler_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:text="@string/fragment_third_recycler_name"
                android:textColor="@color/outInfoRecyclerTitleColor"
                android:textSize="14sp" />

            <TextView
                android:layout_weight="1.2"
                android:id="@+id/fragment_third_recycler_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/outInfoRecyclerContentColor1"
                android:textSize="16sp" android:textStyle="normal|bold"/>

            <TextView
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:text="@string/fragment_third_recycler_time"
                android:textColor="@color/outInfoRecyclerTitleColor"
                android:textSize="14sp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/fragment_third_recycler_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/outInfoRecyclerContentColor1"
                android:textSize="16sp" android:textStyle="normal|bold"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/outInfoRecyclerLine"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="2.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/outInfoRecyclerTitleColor"
                        android:textSize="14sp"
                        android:text="@string/fragment_third_recycler_todayWork"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/fragment_third_recycler_todayWork"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/outInfoRecyclerContentColor2"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

</LinearLayout>