<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/fragment_third_log_detail_toolBar"
            android:background="@drawable/toolbar_line"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_third_log_detail_title"
                        android:textColor="@color/OutInfoDetailTitle"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                    />
                </LinearLayout>

                <TextView
                    android:layout_weight="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/OutInfoDetailBg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/OutInfoDetailSonBg">

                <LinearLayout
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="姓    名"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/log_detail_name"
                        android:layout_weight="1"
                        android:background="@null"
                        android:lines="1"
                        android:singleLine="true"
                        android:hint="请输入姓名"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/OutInfoDetailBg"/>
                <LinearLayout
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="日    期"
                        android:textAlignment="center"/>

                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/log_detail_date"
                        android:lines="1"
                        android:singleLine="true"
                        android:background="@null"
                        android:hint="日期"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/OutInfoDetailBg"/>
                <LinearLayout
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="今日完成工作"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/log_detail_todayComplWork"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="请输入今日完成工作"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLength="200"
                    />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/outInfoRecyclerLine"/>
                <LinearLayout
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="工作计划"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/log_detail_todayPlanWork"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="请输入工作计划"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLength="200"
                    />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/outInfoRecyclerLine"/>
                <LinearLayout
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="需协调工作"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/log_detail_changeWork"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="请输入协调工作"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLength="200"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="               备    注"
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/outinfo_detail">
                    <EditText
                        android:id="@+id/log_detail_info"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:enabled="true"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:minLines="10"
                        android:background="@null"
                        android:hint="请输入备注信息"
                        android:textColorHint="@color/textHitColor2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                    />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_btn_linear_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/log_detail_editBtn"
                    android:onClick="logEditBtn"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_style"
                    android:text="@string/out_detail_button_edit_name"
                    android:textColor="@color/OutInfoDetailSonBg"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/log_detail_saveBtn"
                    android:onClick="logSaveData"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:text="@string/out_detail_button_save_name"
                    android:textColor="@color/OutInfoDetailSonBg"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

